--- a/index.html
+++ b/index.html
@@ -1,128 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
-	<title>CV Igor Koniukhov</title>
-	<link href="https://fonts.gstatic.com" rel="preconnect">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-			rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
+    <title>CV Igor Koniukhov</title>
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+          rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
-	<div class="wrapper-header pattern">
-		<div class="container">
-			<div class="row col-sm-6">
-				<div class="img-wrapper">
-					<img alt="my picture" class="my-pic" src="images/my_p.jpg">
-				</div>
-				<div class="row col-md-6">
-					<div class="wrapper-nav">
-						<h1 class="main-title">Igor Koniukhov</h1>
-						<nav class="navigation ">
-							<ul class="navigation__list-ref">
-								<li class="wrapper-reference ">
-									<a class="navigation__reference git-text active" href="index.html">skills</a>
-								</li>
-								<!--<li class="wrapper-reference "><a class="navigation__reference nav-text "
-										href="past_exp.html">work
-								                             experience</a>
-								</li>-->
-								<li class="wrapper-reference dropdown ">
-									<div class="dropdown-title ">projects</div>
-									<div class="dropdown-menu">
-										<a class="dropdown-items" href="https://kvinerdji.com">kvinerdji.com</a>
-										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
-										<a class="dropdown-items" href="https://peaceful-ocean-57975.herokuapp.com/">Simple site on go</a>
-										<a class="dropdown-items"
-												href="https://kvinerdji-shope.top">Kvinerdji shop</a>
+    <div class="wrapper-header pattern">
+        <div class="container">
+            <div class="row col-sm-6">
+                <div class="img-wrapper">
+                    <img alt="my picture" class="my-pic" src="images/my_p.jpg">
+                </div>
+                <div class="row col-md-6">
+                    <div class="wrapper-nav">
+                        <h1 class="main-title">Igor Koniukhov</h1>
+                        <nav class="navigation ">
+                            <ul class="navigation__list-ref">
+                                <li class="wrapper-reference ">
+                                    <a class="navigation__reference git-text active" href="index.html">skills</a>
+                                </li>
+                                <!--<li class="wrapper-reference "><a class="navigation__reference nav-text "
+                                        href="past_exp.html">work
+                                                             experience</a>
+                                </li>-->
+                                <li class="wrapper-reference dropdown ">
+                                    <div class="dropdown-title ">projects</div>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-items" href="https://kvinerdji.com">kvinerdji.com</a>
+                                        <a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
+                                        <a class="dropdown-items" href="https://peaceful-ocean-57975.herokuapp.com/">Simple
+                                            site on go</a>
+                                        <a class="dropdown-items"
+                                           href="https://kvinerdji-shope.top">Kvinerdji shop</a>
 
-									</div>
-								</li>
-								<li class="wrapper-reference "><a class="dropdown-items git-text"
-										href="https://github.com/Igor-Koniukhov">GitRepository</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-					<div class="contact-info">
-						<p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a></p>
-						<p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">ikoniukhov</a></p>
-						<p class="contact-info__telegramm">Telegramm: <a
-								href="https://teleg.run/ikoniukhov">@ikoniukhov</a></p>
-						<p class="contact-info__email">Email: <a
-								href="mailto:ikoniukhov@gmail.com">ikoniukhov@gmail.com</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                                    </div>
+                                </li>
+                                <li class="wrapper-reference "><a class="dropdown-items git-text"
+                                                                  href="https://github.com/Igor-Koniukhov">GitRepository</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="contact-info">
+                        <p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a></p>
+                        <p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">ikoniukhov</a></p>
+                        <p class="contact-info__telegramm">Telegramm: <a
+                                href="https://teleg.run/ikoniukhov">@ikoniukhov</a></p>
+                        <p class="contact-info__email">Email: <a
+                                href="mailto:ikoniukhov@gmail.com">ikoniukhov@gmail.com</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 <main class="main">
-	<div class="wrapper-page">
-		<div class="container">
-			<div class="content">
-				<h2 class="purpose">Purpose:</h2>
-				<p class="mb-2"><b class="color-b">Junior front-end developer</b></p>
-				<section class="section__introduction mb-2">
-					<div class="section__wrapper-content">
-						<h2 class="title-section2">Skills and Qualifications</h2>
-						<h3>Summary</h3>
-						<p>I am a result and goal oriented person, who obtained good knowledge and experience in HTML,CSS coding and JS programming. I am well familiar with such technologies/frameworks as JS, JQuery, Bootstrap-3, Bootstrap-4, Foundation for Emails 2, WordPress. My main goal is the professional growth in Web-development. </p>
-						<h3 class="mb-1 mt-1">Skills</h3>
-						<p><b class="color-b">English:</b> Intermediate level (strong B1).</p>
-						<p><b class="color-b">Languages:</b>  HTML/HTML5, CSS3/flexbox, JS, Go, SQL</p>
-						<p><b class="color-b">Preprocessors:</b> SCSS, SASS.</p>
-						<p><b class="color-b">Task runner:</b> Gulp-4.</p>
-						<p><b class="color-b">CMS:</b> WordPress.</p>
-						<p><b class="color-b">Libraries/Frameworks:</b> JQuery, Bootstrap-3, Bootstrap-4, Foundation.</p>
-						<p><b class="color-b">Graphics software:</b> PhotoshopCC, Figma, AdobeXD, AuxureRP-8.</p>
-						<p><b class="color-b">Operating systems:</b> Windows, Linux (WSL - Linux Bash).</p>
-						<p><b class="color-b">Tools:</b> WebStorm, Goland, Visual Studio, Brackets.</p>
-						<p><b class="color-b">Version control tools:</b> Git, Github.</p>
-					</div>
-				</section>
-				<section class="work-experience mb-2">
-					<h3 class="mb-1 mt-1">Work experience</h3>
-					<p>LTD"Charly"/"Kvinerdji".</p>
-					<p>Content-manager</p>
-					<p>September 2019 - present.</p>
-				</section>
-				<section class="portfolio mb-2">
-					<h3 class="mb-1 mt-1">Portfolio</h3>
-					<p><a class="color-b" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a> - info-site for "Kvinerdji".</p>
-					<p>Technologies: HTML5, CSS3, Bootstrap-4, js/jquery, Jekyll.</p>
+    <div class="wrapper-page">
+        <div class="container">
+            <div class="content">
+                <h2 class="purpose">Purpose:</h2>
+                <p class="mb-2"><b class="color-b">Junior front-end developer</b></p>
+                <section class="section__introduction mb-2">
+                    <div class="section__wrapper-content">
+                        <h2 class="title-section2">Skills and Qualifications</h2>
+                        <h3>Summary</h3>
+                        <p>I am a result and goal oriented person, who obtained good knowledge and experience in
+                            HTML,CSS coding and JS programming. I am well familiar with such technologies/frameworks as
+                            JS, JQuery, Bootstrap-3, Bootstrap-4, Foundation for Emails 2, WordPress. My main goal is
+                            the professional growth in Web-development. </p>
+                        <h3 class="mb-1 mt-1">Skills</h3>
+                        <p><b class="color-b">English:</b> Intermediate level (strong B1).</p>
+                        <p><b class="color-b">Languages:</b> HTML/HTML5, CSS3/flexbox, JS, Go, SQL</p>
+                        <p><b class="color-b">Preprocessors:</b> SCSS, SASS.</p>
+                        <p><b class="color-b">Task runner:</b> Gulp-4.</p>
+                        <p><b class="color-b">CMS:</b> WordPress.</p>
+                        <p><b class="color-b">Libraries/Frameworks:</b> JQuery, Bootstrap-3, Bootstrap-4, Foundation.
+                        </p>
+                        <p><b class="color-b">Graphics software:</b> PhotoshopCC, Figma, AdobeXD, AuxureRP-8.</p>
+                        <p><b class="color-b">Operating systems:</b> Windows, Linux (WSL - Linux Bash).</p>
+                        <p><b class="color-b">Tools:</b> WebStorm, Goland, Visual Studio.</p>
+                        <p><b class="color-b">Version control tools:</b> Git, GitFlow, Github.</p>
+                    </div>
+                </section>
+                <section class="work-experience mb-2">
+                    <h3 class="mb-1 mt-1">Work experience</h3>
+                    <p>LTD"Charly"/"Kvinerdji".</p>
+                    <p>Content-manager</p>
+                    <p>September 2019 - present.</p>
+                </section>
+                <section class="portfolio mb-2">
+                    <h3 class="mb-1 mt-1">Portfolio</h3>
+                    <p><a class="color-b" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a> - info-site for
+                        "Kvinerdji".</p>
+                    <p>Technologies: HTML5, CSS3, Bootstrap-4, js/jquery, Jekyll.</p>
 
-					<p><a class="color-b" href="https://kvinerdji-shope.top">Kvinerdji shop</a> - internet shop for "Kvinerdji".</p>
-					<p>Technologies: WordPress, Elementor.</p>
-					<br>
-					<p><a class="color-b" href="https://bajdaker.com.ua">bajdaker.com.ua</a> - my pet project about canoe, bike's and trips.</p>
-					<p>Technologies: HTML5, CSS3, Bootstrap-4, js/jquery, Jekyll.</p>
-				</section>
-				<section>
-					<div class="section__education">
-						<h2 class="section__title">Education</h2>
-						<p>Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic).<a 				href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
-								title="мои сертификаты">Click</a></p>
-						<p>Course: IT Project management – 37,5h in Source iT.</p>
-							<p>Specialty: process engineer. <br>
-							                  Faculty: Industrial Pharmacy. <br>
-							                  National University of Pharmacy.
-							</p>
-					</div>
-				</section>
-			</div>
-		</div>
-	</div>
+                    <p><a class="color-b" href="https://kvinerdji-shope.top">Kvinerdji shop</a> - internet shop for
+                        "Kvinerdji".</p>
+                    <p>Technologies: WordPress, Elementor.</p>
+                    <br>
+                    <p><a class="color-b" href="https://bajdaker.com.ua">bajdaker.com.ua</a> - my pet project about
+                        canoe, bike's and trips.</p>
+                    <p>Technologies: HTML5, CSS3, Bootstrap-4, js/jquery, Jekyll.</p>
+                </section>
+                <section>
+                    <div class="section__education">
+                        <h2 class="section__title">Education</h2>
+                        <p>Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic).<a
+                                href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
+                                title="мои сертификаты">Click</a></p>
+                        <p>Course: IT Project management – 37,5h in Source iT.</p>
+                        <p>Specialty: process engineer. <br>
+                            Faculty: Industrial Pharmacy. <br>
+                            National University of Pharmacy.
+                        </p>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
 </main>
 <footer class="pattern">
-	<div class="container direction-row ">
-		<h3 class="footer__title">Get more information:</h3>
-		<a class="certificates"
-				href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
-				title="мои сертификаты">Certificates</a>
-	</div>
+    <div class="container direction-row ">
+        <h3 class="footer__title">Get more information:</h3>
+        <a class="certificates"
+           href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
+           title="мои сертификаты">Certificates</a>
+    </div>
 </footer>
 
 <script src="script.js"></script>
