--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                     <div class="dropdown-menu">
                                         <a class="dropdown-items" href="https://kvinerdji.com">kvinerdji.com</a>
                                         <a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
-                                        <a class="dropdown-items" href="https://peaceful-ocean-57975.herokuapp.com/">Simple
-                                            site on go</a>
+                                        <a class="dropdown-items" href="https://nix-study-api.herokuapp.com/">REST APi</a>
+                                        <a class="dropdown-items" href="https://peaceful-ocean-57975.herokuapp.com/">Simple                                          site on go</a>
                                         <a class="dropdown-items"
                                            href="https://kvinerdji-shope.top">Kvinerdji shop</a>
 
